--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -42,7 +42,7 @@
             </h2>
             <div class="arqueros"> 
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/dibu_martinez_2.jpg" class="card-img-top" alt="Emiliano Martinez">
+                    <img src="../img/scaloneta/equipo/dibu_martinez_2.jpg" class="card-img-top" alt="Emiliano Martinez">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Emiliano Martinez</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Arquero</p>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/armani.jpg" class="card-img-top" alt="Franco Armani">
+                    <img src="../img/scaloneta/equipo/armani.jpg" class="card-img-top" alt="Franco Armani">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Franco Armani</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Arquero</p>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/rulli.jpg" class="card-img-top" alt="Geronimo Rulli">
+                    <img src="../img/scaloneta/equipo/rulli.jpg" class="card-img-top" alt="Geronimo Rulli">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Gerónimo Rulli</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Arquero</p>
@@ -74,7 +74,7 @@
             </h2>
             <div class="defensores"> 
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_cuti_romero.jpg" class="card-img-top" alt="Cristian Romero">
+                    <img src="../img/scaloneta/equipo/def_cuti_romero.jpg" class="card-img-top" alt="Cristian Romero">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Cristian Romero</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Defensor</p>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_german_pezzela.jpg" class="card-img-top" alt="German Pezzela">
+                    <img src="../img/scaloneta/equipo/def_german_pezzela.jpg" class="card-img-top" alt="German Pezzela">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">German Pezzella</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_gonzalo_montiel.jpg" class="card-img-top" alt="Gonzalo Montiel">
+                    <img src="../img/scaloneta/equipo/def_gonzalo_montiel.jpg" class="card-img-top" alt="Gonzalo Montiel">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Gonzalo Montiel</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Defensor</p>
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_huevo_acuña.jpg" class="card-img-top" alt="Marcos Acuña">
+                    <img src="../img/scaloneta/equipo/def_huevo_acuña.jpg" class="card-img-top" alt="Marcos Acuña">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Marcos Acuña</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Defensor</p>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_juan_foyth.jpg" class="card-img-top" alt="Juan Foyth">
+                    <img src="../img/scaloneta/equipo/def_juan_foyth.jpg" class="card-img-top" alt="Juan Foyth">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Juan Foyth</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Defensor</p>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_licha_martinez.jpg" class="card-img-top" alt="Lisandro Martinez">
+                    <img src="../img/scaloneta/equipo/def_licha_martinez.jpg" class="card-img-top" alt="Lisandro Martinez">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Lisandro Martinez</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Defensor</p>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_nahuel_molina.jpg" class="card-img-top" alt="Nahuel Molina">
+                    <img src="../img/scaloneta/equipo/def_nahuel_molina.jpg" class="card-img-top" alt="Nahuel Molina">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Nahuel Molina</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Defensor</p>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_nico_ottamendi.jpg" class="card-img-top" alt="Nicolas Otamendi">
+                    <img src="../img/scaloneta/equipo/def_nico_ottamendi.jpg" class="card-img-top" alt="Nicolas Otamendi">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Nicolas Otamendi</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Defensor</p>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/def_nicolas_tagliafico.jpg" class="card-img-top" alt="Nicolas Tagliafico">
+                    <img src="../img/scaloneta/equipo/def_nicolas_tagliafico.jpg" class="card-img-top" alt="Nicolas Tagliafico">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Nicolas Tagliafico</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Defensor</p>
@@ -155,12 +155,14 @@
                     </div>
                 </div>
             </div>
+
+
             <h2 class="titulo_defensores">
                 Mediocampistas:
             </h2>
             <div class="mediocampistas"> 
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/med_alexis_macAlister.jpg" class="card-img-top" alt="Alexis Mac Allister">
+                    <img src="/img/scaloneta/equipo/../img/scaloneta/equipo/d-img-top" alt="Alexis Mac Allister">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Alexis Mac Allister</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
@@ -169,7 +171,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/med_enzo_fernandez.jpg" class="card-img-top" alt="Enzo Fernandez">
+                    <img src="../img/scaloneta/equipo/med_enzo_fernandez.jpg" class="card-img-top" alt="Enzo Fernandez">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Enzo Fernandez </h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
@@ -178,7 +180,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/med_exequiel_palacioss.jpg" class="card-img-top" alt="Exequiel Palacios">
+                    <img src="../img/scaloneta/equipo/med_exequiel_palacioss.jpg" class="card-img-top" alt="Exequiel Palacios">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Exequiel Palacios</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
@@ -187,7 +189,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/med_guido_rodriguez.jpg" class="card-img-top" alt="Guido Rodriguez">
+                    <img src="../img/scaloneta/equipo/med_guido_rodriguez.jpg" class="card-img-top" alt="Guido Rodriguez">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Guido Rodriguez</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
@@ -196,7 +198,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/med_leo_paredes.jpg" class="card-img-top" alt="Leandro Paredes">
+                    <img src="../img/scaloneta/equipo/med_leo_paredes.jpg" class="card-img-top" alt="Leandro Paredes">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Leandro Paredes</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
@@ -205,7 +207,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/med_papu_gomez.jpg" class="card-img-top" alt="Alejandro Gomez">
+                    <img src="../img/scaloneta/equipo/med_papu_gomez.jpg" class="card-img-top" alt="Alejandro Gomez">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Alejandro Gomez</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampistas</p>
@@ -214,7 +216,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/med_rodrigo_DePaul.jpg" class="card-img-top" alt="Rodrigo De Paul">
+                    <img src="../img/scaloneta/equipo/med_rodrigo_DePaul.jpg" class="card-img-top" alt="Rodrigo De Paul">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Rodrigo De Paul</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
@@ -223,12 +225,16 @@
                     </div>
                 </div>
             </div>
+
+
+
+
             <h2 class="titulo_defensores">
                 Delanteros:
             </h2>
             <div class="mediocampistas"> 
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/del_angel_Correa.jpg" class="card-img-top" alt="Angel Correa">
+                    <img src="../img/scaloneta/equipo/del_angel_Correa.jpg" class="card-img-top" alt="Angel Correa">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Angel Correa</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Delantero</p>
@@ -237,7 +243,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/del_angel_DiMaria.jpg" class="card-img-top" alt="Angel Di Maria">
+                    <img src="../img/scaloneta/equipo/del_angel_DiMaria.jpg" class="card-img-top" alt="Angel Di Maria">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Angel Di Maria</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Delantero</p>
@@ -246,7 +252,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/del_julian_alvarez.jpg" class="card-img-top" alt="Julian Alvarez">
+                    <img src="../img/scaloneta/equipo/del_julian_alvarez.jpg" class="card-img-top" alt="Julian Alvarez">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Julian Alvarez</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Delantero</p>
@@ -255,7 +261,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/del_lautaro_Martinez.jpg" class="card-img-top" alt="Lautaro Martinez">
+                    <img src="../img/scaloneta/equipo/del_lautaro_Martinez.jpg" class="card-img-top" alt="Lautaro Martinez">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Lautaro Martinez</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Delantero</p>
@@ -264,7 +270,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/del_lionel_Messi.jpg" class="card-img-top" alt="Lionel Messi">
+                    <img src="../img/scaloneta/equipo/del_lionel_Messi.jpg" class="card-img-top" alt="Lionel Messi">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Liones Messi</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Delantero</p>
@@ -273,7 +279,7 @@
                     </div>
                 </div>
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/del_paulo_dybala.jpg" class="card-img-top" alt="Paulo Dybala">
+                    <img src="../img/scaloneta/equipo/del_paulo_dybala.jpg" class="card-img-top" alt="Paulo Dybala">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Paulo Dybala</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Delantero</p>
