--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
     <main>
         <section class="section__promocion">
             <div class="section__promocion__img">
-                <img src="/img/scaloneta/La-scaloneta.jpeg" alt="Banner Scaloneta">
+                <img src="./img/scaloneta/La-scaloneta.jpeg" alt="Banner Scaloneta">
             </div>
         </section>
         <section class="galeria-responsive">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active mi_estilo_galeria">
-                    <img src="/img/scaloneta/equipo/copa_america.jpg" class="d-block w-100 " alt="campeon copa america 2020">
+                    <img src="./img/scaloneta/copa-america-conmebol.webp" class="d-block w-100 " alt="campeon copa america 2020">
                   </div>
                   <div class="carousel-item  mi_estilo_galeria">
-                    <img src="/img/scaloneta/equipo/finalisima_2022.jpg" class="d-block w-100" alt="Campeon Finalisima 2022">
+                    <img src="./img/scaloneta/equipo/finalisima_2022.jpg" class="d-block w-100" alt="Campeon Finalisima 2022">
                   </div>
                   <div class="carousel-item  mi_estilo_galeria">
-                    <img src="img/scaloneta/equipo/qatar_2022.webp" class="d-block w-100" alt="Campeon Qatar 2022">
+                    <img src="./img/scaloneta/equipo/qatar_2022.webp" class="d-block w-100" alt="Campeon Qatar 2022">
                   </div>
                 </div>
               </div>
