--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header__logo">
-            <img src="/img/scaloneta/equipo/scaloneta-removebg.png" alt="logo">
+            <img src="../img/scaloneta/equipo/scaloneta-removebg.png" alt="logo">
         </div>
         <nav class="header__navegacion ">
             <label for="check" class="none main"><i class="fas fa-bars"></i></label>
