--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header__logo">
-           <img src="/img/scaloneta/equipo/scaloneta-removebg.png" alt="">
+           <img src="img/scaloneta/equipo/scaloneta-removebg.png" alt="">
         </div>
         <nav class="header__navegacion ">
             <label for="check" class="main"><i class="fas fa-bars"></i></label>
@@ -34,20 +34,20 @@
     <main>
         <section class="section__promocion">
             <div class="section__promocion__img">
-                <img src="./img/scaloneta/La-scaloneta.jpeg" alt="Banner Scaloneta">
+                <img src="img/scaloneta/La-scaloneta.jpeg" alt="Banner Scaloneta">
             </div>
         </section>
         <section class="galeria-responsive">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active mi_estilo_galeria">
-                    <img src="./img/scaloneta/copa-america-conmebol.webp" class="d-block w-100 " alt="campeon copa america 2020">
+                    <img src="img/scaloneta/copa-america-conmebol.webp" class="d-block w-100 " alt="campeon copa america 2020">
                   </div>
                   <div class="carousel-item  mi_estilo_galeria">
-                    <img src="./img/scaloneta/equipo/finalisima_2022.jpg" class="d-block w-100" alt="Campeon Finalisima 2022">
+                    <img src="img/scaloneta/equipo/finalisima_2022.jpg" class="d-block w-100" alt="Campeon Finalisima 2022">
                   </div>
                   <div class="carousel-item  mi_estilo_galeria">
-                    <img src="./img/scaloneta/equipo/qatar_2022.webp" class="d-block w-100" alt="Campeon Qatar 2022">
+                    <img src="img/scaloneta/equipo/qatar_2022.webp" class="d-block w-100" alt="Campeon Qatar 2022">
                   </div>
                 </div>
               </div>
@@ -64,7 +64,7 @@
                 <div class="noticias ">
                     <div class="noticia_principal">
                         <div class="cards__noticia messi">
-                            <img src="/img/scaloneta/messi_101010-removebg.png" alt="Lionel Messi"> 
+                            <img src="img/scaloneta/messi_101010-removebg.png" alt="Lionel Messi"> 
                         </div>
                         <div class="img_responsive">
                             <img src="/img/scaloneta/balonDeOro.jpg" alt="Lionel Messi">
@@ -98,7 +98,7 @@
                         <input type="button" value="Leer más..">
                     </div>
                     <div class="cards__noticia dibu">
-                        <img src="/img/scaloneta/dibu_martinez_2.png" alt="Emiliano Martinez"> 
+                        <img src="img/scaloneta/dibu_martinez_2.png" alt="Emiliano Martinez"> 
                     </div>
                     </a>
                 </div>
