--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -162,7 +162,7 @@
             </h2>
             <div class="mediocampistas"> 
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="/img/scaloneta/equipo/../img/scaloneta/equipo/d-img-top" alt="Alexis Mac Allister">
+                    <img src="../img/scaloneta/equipo/../img/scaloneta/equipo/d-img-top" alt="Alexis Mac Allister">
                     <div class="card-body card-body_miestilo">
                         <h5 class="card-title mi_tilte">Alexis Mac Allister</h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
