--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header__logo">
-           <img src="img/scaloneta/equipo/scaloneta-removebg.png" alt="">
+           <img src="img/scaloneta/equipo/scaloneta-removebg.png" alt="Logo">
         </div>
         <nav class="header__navegacion ">
             <label for="check" class="main"><i class="fas fa-bars"></i></label>
@@ -47,7 +47,7 @@
                     <img src="img/scaloneta/equipo/finalisima_2022.jpg" class="d-block w-100" alt="Campeon Finalisima 2022">
                   </div>
                   <div class="carousel-item  mi_estilo_galeria">
-                    <img src="img/scaloneta/equipo/qatar_2022.webp" class="d-block w-100" alt="Campeon Qatar 2022">
+                    <img src="img/scaloneta/qatar-2022.jpg" class="d-block w-100" alt="Campeon Qatar 2022">
                   </div>
                 </div>
               </div>
@@ -111,7 +111,7 @@
                 Proximo encuentro: <span>16 de Noviembre 2023 21:00hs</span>
             </h2>
             <div class="img_encuentro">
-                <img src="/img/scaloneta/arge_uru.jpg" alt="Argentina vs Uruguay">
+                <img src="img/scaloneta/arge_uru.jpg" alt="Argentina vs Uruguay">
             </div>
         </section>
         <section class="section__categoria">
