ultima modificación, si todo funciona bien

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                 <div class="categoria__img">
                         <div class="categoria__img__img">
-
+                            <img src="img/scaloneta/copa-america-conmebol.webp" alt="Copa America">
                         </div>
                         <h4>
                             Copa America 2021
@@ -130,7 +130,7 @@
                 </div>
                 <div class="categoria__img">
                         <div class="categoria__img__img">
-
+                            <img src="img/scaloneta/finalissima.webp" alt="Copa Finalissima">
                         </div>
                         <h4>
                             Finalisima 2022
@@ -139,7 +139,7 @@
                 <div class="categoria__img">
                    
                         <div class="categoria__img__img">
-
+                            <img src="img/scaloneta/qatar-2022.jpg" alt="Copa del mundo">
                         </div>
                         <h4>
                             Mundial Qatar 2022
