Que sea la ultima

--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -161,10 +161,11 @@
                 Mediocampistas:
             </h2>
             <div class="mediocampistas"> 
+                
                 <div class="card card-R-1 card_miEstilo">
-                    <img src="../img/scaloneta/equipo/med_alexis_macAlister.jpg" alt="Alexis Mac Allister">
+                    <img src="../img/scaloneta/equipo/med_alexis_macAlister.jpg" class="card-img-top" alt="Alexis Mac Allister">
                     <div class="card-body card-body_miestilo">
-                        <h5 class="card-title mi_tilte">Alexis Mac Allister</h5>
+                        <h5 class="card-title mi_tilte">Alexis Mac Allister </h5>
                         <p class="card-text mi_text"><span>Psoción:</span> Mediocampista</p>
                         <p class="card-text mi_text"><span>Equipo:</span> Liverpool</p>
                         <p class="card-text mi_text"><span>Fecha Nac.:</span> 24 Dic. 1998</p>
