por favor que sea la ultima

--- a/pages/fixture.html
+++ b/pages/fixture.html
@@ -35,10 +35,10 @@
         <section class="portada__fixture">
             <div class="portada__fixture__img">
                 <div class="argentina">
-                    <img src="/img/scaloneta/messi_101010-removebg.png" alt="Lionel Messi">
+                    <img src="../img/scaloneta/messi_101010-removebg.png" alt="Lionel Messi">
                 </div>
                 <div class="uruguay">
-                    <img src="/img/scaloneta/federico_valverde-removebg.png" alt="Federico Valverde">
+                    <img src="../img/scaloneta/federico_valverde-removebg.png" alt="Federico Valverde">
                 </div>
             </div>
         </section>        
@@ -112,12 +112,12 @@
                 </table>
                 </div>
                 <div class="escudo">
-                    <img src="/img/scaloneta/afa_escudo-removebg.png" alt="Afa escudo">
+                    <img src="../img/scaloneta/afa_escudo-removebg.png" alt="Afa escudo">
                 </div>
             </div>
             <div class="formacion__uruguay">
                 <div class="escudo">
-                    <img src="/img/scaloneta/escudo_uruguay-removebg.png" alt="Auf escudo">
+                    <img src="../img/scaloneta/escudo_uruguay-removebg.png" alt="Auf escudo">
                 </div> 
                 <div class="tabla_formacion">
                 <table class="formacion_equipos">
