--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 </div>
-                <div class="noticias ">
+                <div class="noticias dibu_martinez">
                     <a href="" class="noticia_principal">
                        
                         
@@ -90,7 +90,7 @@
                         <h3>
                             Lorem ipsum dolor sit amet.
                         </h3>
-                        <p class="parrafo">
+                        <p class="parrafo ">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia omnis tenetur, iste libero deserunt eveniet labore delectus saepe est numquam Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, totam? Quia quod eos officiis. Error veniam sequi earum illo dolores iusto, eius nobis! Eos ipsam commodi voluptas! Ipsam earum ut sed cum. Atque beatae animi amet vel vitae, recusandae magni porro, obcaecati dolor iste laborum tempore tempora! Excepturi enim quis esse accusantium ut? Earum, obcaecati. Incidunt voluptatem eum reiciendis iusto, ipsum quos repellat ipsam quisquam pariatur deleniti eveniet sunt nemo!
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure repellat soluta delectus nisi optio laborum doloremque, est laboriosam aliquid cum incidunt deleniti debitis ad, reiciendis natus eveniet accusantium voluptate. Laudantium.
                             <span class="ocultar">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum fugiat aliquam deserunt magni totam explicabo fugit tenetur modi incidunt! Laudantium molestias voluptatem illum nobis qui quas pariatur dignissimos aperiam voluptas quasi, temporibus nam, veniam corrupti porro inventore non alias quibusdam perspiciatis possimus eos facere ipsam tenetur, reprehenderit ab. Necessitatibus dignissimos est quam accusamus laudantium aliquam voluptate sequi tempore reiciendis perspiciatis enim fugit eaque eveniet, ex nam. Animi, dolore debitis? Tempore.</span>
@@ -107,11 +107,8 @@
             </div>
         </section>
         <section class="proximos_encuentro">
-            <h2>
-                Proximo encuentro: <span>16 de Noviembre 2023 21:00hs</span>
-            </h2>
             <div class="img_encuentro">
-                <img src="img/scaloneta/arge_uru.jpg" alt="Argentina vs Uruguay">
+                <img src="img/scaloneta/img_banners/encuentro.jpg" alt="Argentina vs Uruguay">
             </div>
         </section>
         <section class="section__categoria">
