Tercera pre-ebtrega

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+        <link rel="shortcut icon" href="../img/favicon/favicon-32x32.png" type="image/x-icon">
         <link rel="stylesheet" href="../style/style.css">
         <title>Scaloneta</title>
     </head>
@@ -51,7 +52,7 @@
                     <label for="name">Email:</label>
                     <input type="email" placeholder="Ej: Manolo@hotmail....">
                     <label for="phone">Telefono:</label>
-                    <input type="text" placeholder="Ej: 15-XXXX-XXXX">
+                    <input type="number" placeholder="Ej: 15-XXXX-XXXX">
                 </div>
                 <div>
                     <textarea name="" id="" cols="50" rows="5" placeholder="Escribe un mensaje"></textarea>
