--- a/pages/fixture.html
+++ b/pages/fixture.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="../img/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
     <title>Scaloneta</title>
 </head>
@@ -34,12 +35,7 @@
     <main>
         <section class="portada__fixture">
             <div class="portada__fixture__img">
-                <div class="argentina">
-                    <img src="../img/scaloneta/messi_101010-removebg.png" alt="Lionel Messi">
-                </div>
-                <div class="uruguay">
-                    <img src="../img/scaloneta/federico_valverde-removebg.png" alt="Federico Valverde">
-                </div>
+              
             </div>
         </section>        
          <section class="formacion_equipos">
