--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="../img/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
     <title>Scaloneta</title>
 </head>
