sumando sass al proyecto

--- a/pages/fixture.html
+++ b/pages/fixture.html
@@ -35,7 +35,7 @@
     <main>
         <section class="portada__fixture">
             <div class="portada__fixture__img">
-              
+              <img src="../img/scaloneta/img_banners/img-3.jpg" alt="Argentina vs Uruguay">
             </div>
         </section>        
          <section class="formacion_equipos">
