sumando sass a page plantel

--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -41,7 +41,7 @@
             <h2>
                 Arqueros:
             </h2>
-            <div class="arqueros"> 
+            <div class="contenedor_card"> 
                 <div class="card card-R-1 card_miEstilo">
                     <img src="../img/scaloneta/equipo/dibu_martinez_2.jpg" class="card-img-top" alt="Emiliano Martinez">
                     <div class="card-body card-body_miestilo">
@@ -73,7 +73,7 @@
             <h2 class="titulo_defensores">
                 Defensores:
             </h2>
-            <div class="defensores"> 
+            <div class="contenedor_card"> 
                 <div class="card card-R-1 card_miEstilo">
                     <img src="../img/scaloneta/equipo/def_cuti_romero.jpg" class="card-img-top" alt="Cristian Romero">
                     <div class="card-body card-body_miestilo">
@@ -161,7 +161,7 @@
             <h2 class="titulo_defensores">
                 Mediocampistas:
             </h2>
-            <div class="mediocampistas"> 
+            <div class="contenedor_card"> 
                 
                 <div class="card card-R-1 card_miEstilo">
                     <img src="../img/scaloneta/equipo/med_alexis_macAlister.jpg" class="card-img-top" alt="Alexis Mac Allister">
@@ -234,7 +234,7 @@
             <h2 class="titulo_defensores">
                 Delanteros:
             </h2>
-            <div class="mediocampistas"> 
+            <div class="contenedor_card"> 
                 <div class="card card-R-1 card_miEstilo">
                     <img src="../img/scaloneta/equipo/del_angel_Correa.jpg" class="card-img-top" alt="Angel Correa">
                     <div class="card-body card-body_miestilo">
