Empieza el responsive con sass

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -40,34 +40,29 @@
             </h1>
             <div class="contenedor-texto">
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id omnis, quo, aut excepturi repellendus quis numquam debitis alias corporis mollitia natus assumenda ex optio consectetur odio iste, rem consequatur eaque nostrum voluptate. Itaque, nostrum dolores excepturi fugit molestias beatae! Facilis.
+                    Bienvenido a la fan page oficial de La Scaloneta, un espacio dedicado a todos los apasionados por el fútbol y, especialmente, por la gloriosa historia y presente de la Selección Argentina.
                 </p>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id omnis, quo, aut excepturi repellendus quis numquam debitis alias corporis mollitia natus assumenda ex optio consectetur odio iste, rem consequatur eaque nostrum voluptate. Itaque, nostrum dolores excepturi fugit molestias beatae! Facilis.
+                    Nuestro objetivo es compartir la emoción, los logros, los momentos épicos y la esencia que hacen de La Scaloneta un símbolo de pasión y entrega en el mundo del fútbol. Desde la brillantez de leyendas como Maradona y Messi hasta el compromiso inquebrantable de cada jugador que ha vestido con orgullo la camiseta albiceleste, celebramos la grandeza y la identidad única de nuestro equipo nacional.
+                </p>
+
+                <p>
+                    En esta página, encontrarás actualizaciones, noticias, curiosidades, estadísticas, momentos destacados y todo lo relacionado con el presente y el legado de La Scaloneta. Queremos ser tu fuente confiable de información, un lugar donde los aficionados se reúnen para compartir su amor por la selección argentina, debatir, celebrar y emocionarse con cada gol, cada victoria y cada paso de nuestros jugadores en el campo.
+                </p>
+
+                <p>
+                    Únete a esta comunidad apasionada, donde todos los corazones latentes por el fútbol argentino tienen un lugar para expresarse, conectarse y sentir la gloria de nuestra selección. ¡Acompáñanos en este viaje emocionante a través de la historia y el presente de La Scaloneta!
                 </p>
 
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id omnis, quo, aut excepturi repellendus quis numquam debitis alias corporis mollitia natus assumenda ex optio consectetur odio iste, rem consequatur eaque nostrum voluptate. Itaque, nostrum dolores excepturi fugit molestias beatae! Facilis.
                 </p>
-
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id omnis, quo, aut excepturi repellendus quis numquam debitis alias corporis mollitia natus assumenda ex optio consectetur odio iste, rem consequatur eaque nostrum voluptate. Itaque, nostrum dolores excepturi fugit molestias beatae! Facilis.
+                    ¡Gracias por ser parte de esta gran familia albiceleste!
                 </p>
-
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id omnis, quo, aut excepturi repellendus quis numquam debitis alias corporis mollitia natus assumenda ex optio consectetur odio iste, rem consequatur eaque nostrum voluptate. Itaque, nostrum dolores excepturi fugit molestias beatae! Facilis.
-                </p>
-
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id omnis, quo, aut excepturi repellendus quis numquam debitis alias corporis mollitia natus assumenda ex optio consectetur odio iste, rem consequatur eaque nostrum voluptate. Itaque, nostrum dolores excepturi fugit molestias beatae! Facilis.
-                </p>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id omnis, quo, aut excepturi repellendus quis numquam debitis alias corporis mollitia natus assumenda ex optio consectetur odio iste, rem consequatur eaque nostrum voluptate. Itaque, nostrum dolores excepturi fugit molestias beatae! Facilis.
-                </p>
-
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id omnis, quo, aut excepturi repellendus quis numquam debitis alias corporis mollitia natus assumenda ex optio consectetur odio iste, rem consequatur eaque nostrum voluptate. Itaque, nostrum dolores excepturi fugit molestias beatae! Facilis.
-                </p>
+                <div class="scaloneta">
+                    <img src="../img/scaloneta/equipo/scaloneta-removebg.png" alt="">
+                </div>
             </div>
             
         </section>
