--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active mi_estilo_galeria">
-                        <img src="img/scaloneta/copa-america-conmebol.webp" class="d-block w-100 "
+                        <img src="img/scaloneta/img_banners/banner-2.jpg" class="d-block w-100 "
                             alt="campeon copa america 2020">
                     </div>
                     <div class="carousel-item  mi_estilo_galeria">
@@ -188,6 +188,9 @@
                             </p>
                             <input type="button" value="Leer más..">
                         </div>
+                        <div class="img_responsive">
+                            <img src="img/scaloneta/equipo/dibu__martinez.webp" alt="Emiliano Martinez">
+                        </div>
                         <div class="cards__noticia dibu">
                             <img src="img/scaloneta/dibu_martinez_2.png" alt="Emiliano Martinez">
                         </div>
@@ -258,12 +261,14 @@
             <h3>
                 Ayuda
             </h3>
+            <div class="links__footer">
             <a href="#">Novedades</a>
             <a href="#">Ultima moda</a>
             <a href="#">Destacados</a>
             <a href="#">Contacto</a>
             <a href="#">Opciones de pago</a>
             <a href="#">Politica de Cambios</a>
+        </div>
         </div>
         <div class="footer__redes">
             <div class="aboutUs">
@@ -288,11 +293,12 @@
 
         </div>
         <div class="footer__info">
-            <h3>
-                Contactanos
-            </h3>
+           
             <div class="info-contacto">
                 <div class="info">
+                    <h3>
+                        Contactanos
+                    </h3>
                     <p>
                         Dirección: Wall St, New York, NY, EE. UU.
                     </p>
